--- a/index.html
+++ b/index.html
@@ -33,37 +33,37 @@
         </nav>
     </header>
     <section>
-            <div id="banner" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#banner" data-slide-to="0" class="active"></li>
-                    <li data-target="#banner" data-slide-to="1"></li> 
-                    <li data-target="#banner" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/slide1.png" class="img-fluid d-block" alt="foto dos pés de um bebê">
-                        <div class="carousel-caption">
-                            <h2>O frete é por nossa conta!</h2>
-                            <p>Segundas vias de certidões e buscas personalizadas de um jeito mais fácil, rápido e segurp.</p>
-                            <a href="#" class="btn btn-primary">Solicite a 2° Via!</a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/slide2.png" class="img-fluid d-block" alt="foto dos pés de um bebê">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/slide3.png" class="img-fluid d-block"  alt="foto dos pés de um bebê">
+        <div id="banner" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#banner" data-slide-to="0" class="active"></li>
+                <li data-target="#banner" data-slide-to="1"></li>
+                <li data-target="#banner" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/slide1.png" class="img-fluid d-block" alt="foto dos pés de um bebê">
+                    <div class="carousel-caption mb-0">
+                        <h2>O frete é por nossa conta!</h2>
+                        <p>Segundas vias de certidões e buscas personalizadas de um jeito mais fácil, rápido e segurp.</p>
+                        <a href="#" class="btn btn-primary">Solicite a 2° Via!</a>
                     </div>
                 </div>
+                <div class="carousel-item">
+                    <img src="img/slide2.png" class="img-fluid d-block" alt="foto dos pés de um bebê">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/slide3.png" class="img-fluid d-block" alt="foto dos pés de um bebê">
+                </div>
             </div>
-                <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                    <span class="sr-only">Anterior</span>
-                </a>
-                <a class="carousel-control-next" href="#banner" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                    <span class="sr-only">Avançar</span>
-                </a>
+        </div>
+        <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#banner" role="button" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="sr-only">Avançar</span>
+        </a>
     </section>
     <section class="section2">
         <h2>Nossas Soluções</h2>
